# ilogic-vm

./: CMakeLists.txt  target_tools.cmake  target_tools_dep.cmake
BaseCommon/: CMakeLists.txt
BaseCommon/include/: AutoTree.h  BaseTypes.h  Bounds2f.h  Bounds3f.h  ClassFactory.h  ClassNode.h  ClassNodeInterface.h  ClassNodeType.h  ClassTree.h  HashBase.h  IBaseInterface.h  ICollisionInterface.h  IObjectAbstract.h  IRenderInterface.h  OEMBase.h  ObjectDeclaration.h  ObjectFactory.h  Property.h  StringUtility.h  TArray.h  TypesBase.h  UtFile.h  ValueParser.h  mathlib.h  matrix.h  matrix3.h  permutations.h  quat.h  singleton.h  vector.h  vector2f.h  vector4f.h  xmlparser.h
BaseCommon/src/: ClassNode.cpp  ClassTree.cpp  ObjectFactory.cpp  Property.cpp  StringUtility.cpp  TArray.cpp  UtFile.cpp  mathlib.cpp  matrix.cpp  matrix3.cpp  quat.cpp  vector.cpp  vector2f.cpp  vector4f.cpp
BaseCommon/ut/: main.cpp  ut_appclasstree.cpp  ut_autotree.cpp  ut_matrix_transform.cpp  ut_treemap.cpp  ut_treemap_fixture.h
CoreSDK/: ActionBase.cpp  ActionBase.h  ActionEventUI.cpp  ActionHandler.cpp  ActionLoadLevel.cpp  ActionLoadLevel.h  ActionTrigger.cpp  ActionTrigger.h  ActorAllocator.cpp  ActorAllocator.h  ActorAllocator_Static.cpp  ActorCollisionController.cpp  ActorCollisionController.h  ActorCollisionKinematicController.cpp  ActorCollisionKinematicController.h  AnimationController.cpp  AnimationController2D.h  AnimationSequerence.cpp  AnimationSequerence.h  BaseModificator.cpp  BaseModificator.h  BaseModificatorUI.cpp  BaseModificatorUI.h  BaseSplineAgregator.cpp  BaseSplineAgregator.h  BezierSplineAgregator_Brush.cpp  BezierSplineAgregator_Brush.h  Bezier_SplineAgregator.cpp  Bezier_SplineAgregator.h  BoxCharacterController.cpp  BoxCharacterController.h  BoxCollisionController.cpp  BoxCollisionController.h  BoxCollisionController_Brush.cpp  BoxCollisionController_Brush.h  Brush_AbstractInterface.cpp  Brush_AbstractInterface.h  Brush_LevelActor.cpp  Brush_LevelActor.h  CMakeLists.txt  (+200 more)
CoreSDK/VTune/: CoreSDK.vpj
CoreSDK/editors/: scene_editor.cpp  scene_editor.h  scene_editor_main.cpp  scene_editor_main.h
CoreSDK/include/: Base.h  PxCamera.h  PxLevelActor.h
CoreSDK/src/: Camera.cpp  Camera.h  LevelActor.cpp  (+2 more)
D3DDrv/: AnimFrame.cpp  AnimFrame.h  AnimSequence.cpp  AnimSequence.h  BaseMaterial.cpp  BaseMaterial.h  CMakeLists.txt  D3DAnimMesh.cpp  D3DAnimMesh.h  D3DDriver.cpp  D3DDriver.h  D3DDriver_Debug.cpp  D3DDriver_Loader.cpp  D3DFontMesh.cpp  D3DFontMesh.h  D3DMesh.cpp  D3DMesh.h  D3DRenderInterface.cpp  D3DRenderInterface.h  D3DRenderTarget.cpp  D3DRenderTarget.h  D3DShader.cpp  D3DShader.h  D3DSkeleton.cpp  D3DSkeleton.h  D3DSkeletonData.h  D3DUtil.cpp  D3DUtil.h  DDSLoader.cpp  Font2D.cpp  Font2D.h  FontNode.cpp  FontNode.h  MaterialEffect.cpp  MaterialEffect.h  MaterialEffectFont.cpp  MaterialEffectFont.h  MaterialEffectLava.cpp  MaterialEffectLava.h  MaterialEffectNode.cpp  (+30 more)
Editors/: CMakeLists.txt  command_base.cpp  command_base.h  command_buffer.cpp  command_buffer.h  editor.cpp  editor.h  icommand.h  icommand_buffer.h  ieditor.h  moc_editor.cxx  module.h  scene_editor.cpp  scene_editor.h  scene_editor_main.cpp  scene_editor_main.h  selection_container.h
Foundation/: Actor.cpp  Actor.h  Actor_Static.cpp  AutoTree.h  BoundingTree.h  Bounds2f.h  Bounds3f.h  CMakeLists.txt  ClassFactory.h  ClassNode.cpp  ClassNode.h  ClassNodeInterface.h  ClassNodeType.h  ClassTree.cpp  ClassTree.h  CriticalSection.cpp  CriticalSection.h  DefTypes.h  EventDesc.cpp  EventDesc.h  FoundationSDK.h  IBaseInterface.h  ICollisionInterface.h  IEventManager.h  IListener.h  IRenderInterface.h  MemoryAllocator.cpp  MemoryAllocator.h  MessageMap.h  ObjectAbstract.cpp  ObjectAbstract.h  ObjectDeclaration.h  ObjectFactory.h  Property.cpp  Property.h  StdafxFoundation.h  Streams.cpp  Streams.h  StringUtility.cpp  StringUtility.h  (+37 more)
Launcher/: ActionPlayEditor.h  AssetBrowser.h  CMakeLists.txt  DragDropSource.h  IAssetBrowserFrame.h  ImageBitmap.cpp  Launcher.cpp  LauncherStdAfx.h  Licence.txt  ListVeiwEdit.h  ListViewCombobox.h  ListViewEditResource.h  MSelectTree.h  MainFrame.h  MainFrame.ipp  PaneListView.h  PanePropertyContainer.h  PaneTreeContainer.h  PaneTreeContainer.ipp  PaneTreeView.h  PaneViewAssetContainer.h  PaneViewContrainer.h  ThreadManager.cpp  ThreadManager.h  ThreadManagerSerial.cpp  ThreadManagerSerial.h  ToolbarControl.cpp  ToolbarControl.h  ToolbarHelper.h  WTLItemsTree.h  WTLPropertyGrid.h  Win32ImageList.cpp  Win32ImageList.h  Win32InputBox.cpp  Win32InputBox.h  Win32ItemsTree.h  Win32ObjectBrowserWidget.cpp  Win32ObjectBrowserWidget.h  Win32ObjectBrowserWidget.ipp  Win32ObjectToolbox.cpp  (+9 more)
MaxExporter/: AnimTrackMax.cpp  AnimTrackMax.h  CMakeLists.txt  CollisionTypes.h  DllEntry.cpp  ExportModel.cpp  ExportNode.cpp  ExportTypes.h  ExporterMax.cpp  ExporterMax.h  FileExport.cpp  MaterialExporter.cpp  MaxExporter.aps  MaxExporter.def  MaxExporter.rc  MaxExporter.vcproj  MaxExporter.vcxproj  MaxExporter.vcxproj.filters  NVMeshMender.cpp  NVMeshMender.h  SkeletonObjectMax.cpp  SkeletonObjectMax.h  UtilityForm.cpp  UtilityForm.h  exporterafx.h  expstdafx.h  resource.h  resourse.h
RenderSDK/: BoneObject.h  CMakeLists.txt  Comp_AnimMesh.h  Comp_AnimTrack.cpp  Comp_AnimTrack.h  Comp_EnvSceneInfo.cpp  Comp_EnvSceneInfo.h  Comp_MaterialBaseEffect.cpp  Comp_MaterialBaseEffect.h  Comp_MaterialButton.cpp  Comp_MaterialButton.h  Comp_MaterialEffect.cpp  Comp_MaterialEffect.h  Comp_MaterialEffectFont.cpp  Comp_MaterialEffectFont.h  Comp_MaterialEffectLava.cpp  Comp_MaterialEffectLava.h  Comp_MaterialEffectUI.cpp  Comp_MaterialEffectUI.h  Comp_MeshNode.cpp  Comp_MeshNode.h  Comp_RenderTarget.cpp  Comp_RenderTarget.h  Comp_SkeletonObject.cpp  Comp_StaticMesh.cpp  Comp_StaticMesh.h  D3DMeshAllocator.cpp  D3DMeshAllocator.h  FXMatManager.cpp  FXMatManager.h  MaterialInstance.h  RenderAdjacency.cpp  RenderAdjacency.h  RenderFont.h  RenderObject.cpp  RenderObject.h  RenderSDK.cpp  RenderSDK.h  RenderSDKInterface.cpp  RenderSDKInterface.h  (+49 more)
TinyXML/: CMakeLists.txt  tinyxml.h
reflx/: CMakeLists.txt
(+2911 files in other folders)
